tests/cases/01_02_wrong_results.stderr
[2022-09-09T02:18:39Z INFO  actix_server::builder] Starting 8 workers
[2022-09-09T02:18:39Z INFO  actix_server::server] Actix runtime found; starting in Actix runtime
[2022-09-09T02:18:40Z INFO  actix_web::middleware::logger] 127.0.0.1 "GET / HTTP/1.1" 404 0 "-" "-" 0.000162
[2022-09-09T02:18:40Z INFO  actix_web::middleware::logger] 127.0.0.1 "POST /jobs HTTP/1.1" 200 377 "-" "-" 0.000490
[2022-09-09T02:18:41Z INFO  actix_web::middleware::logger] 127.0.0.1 "GET /jobs/0 HTTP/1.1" 200 433 "-" "-" 0.000315
[2022-09-09T02:18:41Z INFO  actix_web::middleware::logger] 127.0.0.1 "POST /jobs HTTP/1.1" 200 375 "-" "-" 0.001712
thread 'main' panicked at 'Hello World!', temp_1/main.rs:1:13
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
[2022-09-09T02:18:42Z INFO  actix_web::middleware::logger] 127.0.0.1 "GET /jobs/1 HTTP/1.1" 200 433 "-" "-" 0.000511
[2022-09-09T02:18:42Z INFO  actix_web::middleware::logger] 127.0.0.1 "POST /jobs HTTP/1.1" 200 379 "-" "-" 0.001650
error: 1 positional argument in format string, but no arguments were given
 --> temp_2/main.rs:1:35
  |
1 | fn main() { println!("Hello World!{}"); }
  |                                   ^^

error: aborting due to previous error

[2022-09-09T02:18:43Z INFO  actix_web::middleware::logger] 127.0.0.1 "GET /jobs/2 HTTP/1.1" 200 427 "-" "-" 0.000340
